# OrcaWeb

./: .gitignore  .gitmodules  NOTICE.md  README.md  agents.md  biome.json  index.html  mkdocs.yml  package-lock.json  package.json  playwright.config.ts  pwa-assets.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts  wrangler.jsonc
.github/: RELEASE_TAG_TODO.md  dependabot.yml
.github/workflows/: build-wasm-debug.yml  build-wasm-threads-poc.yml  build-wasm.yml  ci.yml  create-tag.yml  deploy-cloudflare-pages.yml  deploy.yml  e2e-smoke.yml  extract-cache.yml  pr-preview.yml
app/: index.html  manifest.webmanifest  registerSW.js  sw.js
app/assets/: index--jLYxulr.js  index-4bEc1qHo.js  index-BIe2CoDd.js  index-BSNYtPJP.js  index-BSojM5Z7.js  index-BYq99xgo.css  index-BZ19533l.js  index-BfmajTJO.js  index-Bj81mkuY.js  index-BjwGks8D.js  index-Boer9pHY.js  index-BsbGcE8j.js  index-C-JhZ1hb.js  index-C3xlsPXE.js  index-C5gfZ_7n.css  index-CED0XPEi.css  index-CQatHLdc.js  index-CRi2r0zQ.css  index-CVBYxX4V.js  index-CcH0DT3O.js  index-ClE7Av4L.js  index-CmnW99jI.css  index-D2WNGp-8.js  index-D5OQX8X-.js  index-DFEQqVd5.js  index-DNBoSuam.js  index-DZP0ehrb.js  index-Dn1OYegk.js  index-DnTFFmoc.js  index-DoLk0DO2.js  index-DySUHIVf.js  index-HQnb677v.css  index-N4_GKAVd.js  index-NGO4ukTF.js  index-Qm1EcFJN.js  index-QrKpEz1O.js  index-ZHwT5w4w.js  index-ZtQZOEiI.js  index-eggyEm2w.css  index-q68Ip3OV.js  (+7 more)
app/wasm/: engine-version.json  slicer-mt.js  slicer.js
cli/: package-lock.json  package.json  tsconfig.json
cli/src/: download.ts  index.ts  slicer.ts
docs/: 02-cli-prototype.md  03-web-ui.md  04-wasm-integration-fix.md  06-architecture.md  07-wasm-self-build.md  08-engine-patches.md  404.html  README.md  index.html  sitemap.xml
docs/adr/: index.html
docs/api-reference/: index.html
docs/architecture/: index.html
docs/cli/: index.html
docs/gcode-compression-benchmark/: index.html
docs/getting-started/: index.html
docs/integration/: index.html
docs/old/: 01-research.md  05-mvp-verification.md
docs/orca-patch-audit/: index.html
docs/profiles/: index.html
docs/search/: search_index.json
docs/st-mt-benchmark/: index.html
docs/status/: index.html
docs/stylesheets/: extra.css
docs/user-guide/: index.html
docs/wasm-build/: index.html
e2e/: slice-config-snapshot.spec.ts  slice.spec.ts  tsconfig.json
e2e/fixtures/: cube-stl.ts
landing/: index.html
mkdocs-docs/: api-reference.md  architecture.md  cli.md  gcode-compression-benchmark.md  getting-started.md  index.md  integration.md  orca-patch-audit.md  profiles.md  st-mt-benchmark.md  status.md  user-guide.md  wasm-build.md
mkdocs-docs/adr/: adr-001-client-side-wasm.md  adr-002-tech-stack.md  adr-003-web-worker.md  adr-004-self-built-wasm.md  adr-005-no-slicer-data.md  adr-006-patch-strategy.md  adr-007-tbb-stubs.md  adr-008-session-handle.md  adr-009-wasm-smoke-test.md  adr-010-e2e-smoke-test.md  adr-011-multithreaded-engine.md  index.md
orca-wasm/: CMakeLists.txt  MT-PLAN.md  README.md
orca-wasm/bridge/: CMakeLists.txt  slicer.cpp
orca-wasm/cmake/: FindBoost.cmake  FindCURL.cmake  FindFreetype.cmake  FindGLEW.cmake  FindJPEG.cmake  FindOpenCASCADE.cmake  FindOpenCV.cmake  FindOpenGL.cmake  FindOpenSSL.cmake  FindOpenVDB.cmake  FindPNG.cmake  FindTBB.cmake  FindZLIB.cmake  Findcereal.cmake  Finddraco.cmake  Findglfw3.cmake  Findlibnoise.cmake  wasm_find_paths.cmake
orca-wasm/overrides/src/libslic3r/: ObjColorUtils.cpp  ObjColorUtils.hpp  OpenVDBUtils.cpp  OpenVDBUtils.hpp
orca-wasm/overrides/src/libslic3r/Feature/FuzzySkin/: FuzzySkin.cpp
orca-wasm/overrides/src/libslic3r/Format/: DRC.cpp  STEP.cpp  STEP.hpp  svg.cpp
orca-wasm/overrides/src/libslic3r/SLA/: Hollowing.cpp
orca-wasm/overrides/src/libslic3r/Shape/: TextShape.cpp
orca-wasm/patches/: apply.py
orca-wasm/scripts/: build-local-wsl.sh  build.sh  compare-st-mt.mjs  smoke-test.mjs
orca-wasm/scripts/lib/: engine-harness.mjs
orca-wasm/wasm/: CMakeLists.txt  empty_main.cpp
orca-wasm/wasm/shims/: ft2build.h
orca-wasm/wasm/shims-common/freetype/: freetype.h  ftglyph.h  ftoutln.h
orca-wasm/wasm/shims-common/openssl/: md5.h
orca-wasm/wasm/shims-mt/: ft2build.h
orca-wasm/wasm/shims-mt/freetype/: freetype.h  ftbbox.h  ftglyph.h  ftmodapi.h  ftoutln.h
orca-wasm/wasm/shims-mt/oneapi/: tbb.h
orca-wasm/wasm/shims-mt/oneapi/tbb/: blocked_range.h  concurrent_unordered_set.h  concurrent_vector.h  parallel_for.h  parallel_for_each.h  parallel_invoke.h  parallel_reduce.h  partitioner.h  scalable_allocator.h  version.h
orca-wasm/wasm/shims-mt/openssl/: md5.h
orca-wasm/wasm/shims-mt/openvdb/: openvdb.h
orca-wasm/wasm/shims-mt/tbb/: blocked_range.h  blocked_range2d.h  concurrent_unordered_map.h  concurrent_unordered_set.h  concurrent_vector.h  global_control.h  parallel_for.h  parallel_for_each.h  parallel_invoke.h  parallel_pipeline.h  parallel_reduce.h  partitioner.h  spin_mutex.h  task_arena.h  task_group.h  tbb.h  version.h
orca-wasm/wasm/shims-mt/tbb/detail/: thread_pool.h
orca-wasm/wasm/shims-mt/test/: test_shims_mt.cpp
orca-wasm/wasm/shims/freetype/: freetype.h  ftbbox.h  ftmodapi.h
orca-wasm/wasm/shims/oneapi/: tbb.h
orca-wasm/wasm/shims/oneapi/tbb/: blocked_range2d.h  concurrent_unordered_map.h  global_control.h  parallel_pipeline.h  scalable_allocator.h  spin_mutex.h  task_arena.h  task_group.h  version.h
orca-wasm/wasm/shims/openvdb/: openvdb.h
orca-wasm/wasm/shims/tbb/: blocked_range2d.h  concurrent_unordered_map.h  concurrent_unordered_set.h  concurrent_vector.h  global_control.h  parallel_for.h  parallel_for_each.h  parallel_invoke.h  parallel_pipeline.h  parallel_reduce.h  partitioner.h  spin_mutex.h  task_arena.h  task_group.h  tbb.h
poc/wasm-threads/: .gitignore  (+6 more)
scripts/: benchmark-gcode-compression.mjs  cf-build.mjs  download-wasm.mjs  fetch-orca-profiles.ts  gen-wsl-build-lib.mjs  gen-wsl-build-lib.test.mjs  gen-wsl-build-script.mjs  generate-corpus.mjs  repro-oom.mjs  repro-real-stl.mjs  simple_cube_30mm.stl
src/: App.tsx  globals.d.ts  index.css  main.tsx  vite-env.d.ts
(+117 files in other folders)
